--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -171,5 +171,11 @@ i.fa-pen {
   max-width: 200px;
   max-height: 200px;
   background-color:white;
-  padding: 5px;
+  padding: 0!important;
+}
+
+.removeBG {
+  background-color: unset !important;
+  padding: 0!important;
+  box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.2);
 }
